# experiments

./: Cargo.toml  README.md
.github/workflows/: checks.yaml
docs/: host_setup.md
results/image-pull/: README.md
results/image-pull/data/: fio_unencrypted_guest-lazy_cold.csv  fio_unencrypted_guest-lazy_warm.csv  fio_unencrypted_guest-pull_cold.csv  fio_unencrypted_guest-pull_warm.csv  fio_unencrypted_host-mount_cold.csv  fio_unencrypted_host-mount_warm.csv  hello-world_unencrypted_guest-lazy_cold.csv  hello-world_unencrypted_guest-lazy_warm.csv  hello-world_unencrypted_guest-pull_cold.csv  hello-world_unencrypted_guest-pull_warm.csv  hello-world_unencrypted_host-mount_cold.csv  hello-world_unencrypted_host-mount_warm.csv  hw_unencrypted_guest-lazy_cold.csv  hw_unencrypted_guest-lazy_warm.csv  hw_unencrypted_guest-pull_cold.csv  hw_unencrypted_guest-pull_warm.csv  tf-inference_unencrypted_guest-lazy_cold.csv  tf-inference_unencrypted_guest-lazy_warm.csv  tf-inference_unencrypted_guest-pull_cold.csv  tf-inference_unencrypted_guest-pull_warm.csv  tf-inference_unencrypted_host-mount_cold.csv  tf-inference_unencrypted_host-mount_warm.csv
results/scale-up/data/: kata.csv  snp.csv
results/start-up/: README.md
results/start-up/data/: kata.csv  kata_cold.csv  kata_warm.csv  runc.csv  runc_cold.csv  runc_warm.csv  snp-sc2.csv  snp-sc2_cold.csv  snp-sc2_warm.csv  snp.csv  snp_cold.csv  snp_warm.csv  tdx-sc2_cold.csv  tdx-sc2_warm.csv  tdx.csv  (+2 more)
src/: args.rs  baselines.rs  containerd.rs  cri.rs  deploy.rs  env.rs  experiment.rs  kubernetes.rs  main.rs  plot.rs
