[package]
name = "sc2-exp"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "^0.4.38"
clap = { version = "4.0", features = ["derive"] }
csv = "^1.1"
env_logger = "^0.10"
indicatif = "^0.17"
log = "^0.4"
nix = { version = "^0.29.0", features = ["user"] }
plotters = "^0.3.7"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
